tests/struct_composition_bad_cycle.stderr
tests/struct_composition_bad_cycle.sl:7:2: error: SL2014: embedded struct cycle detected
