tests/struct_composition_bad_cycle.sl
struct A {
	B
}

struct B {
	A
}
